--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ img {
 .why-us {
     margin-bottom: 3rem;
 }
+
 .why-us .col-left {
     width: 40%;
 }
@@ -127,3 +128,13 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+/* TABLET TO 768PX */
+
+@media screen and (max-width: 768px) {
+    .container {
+        max-width: 768px;
+        margin: 0 auto;
+        justify-content: center;
+    }
+}
