--- a/css/style.css
+++ b/css/style.css
@@ -136,5 +136,30 @@ img {
         max-width: 768px;
         margin: 0 auto;
         justify-content: center;
+        padding: 0 20x;
     }
 }
+
+/* MOBILE TO 480PX */
+
+@media screen and (max-width: 480px) {
+    .container {
+        max-width: 480px;
+        margin: 0 auto;
+        justify-content: center;
+        padding: 0 70px;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .row .col {
+        width: 100%;
+        margin-bottom: 50px;
+        line-height: 25px;
+    }
+}
+
+/*  */
