add bonus level completed

--- a/css/style.css
+++ b/css/style.css
@@ -162,12 +162,11 @@ img {
     }
 }
 
-/* BONUS
+/* BONUS */
 
-@media screen and (min-width:769px) and (max-width: 1160px) {
+@media screen and (min-width: 769px) and (max-width: 1160px) {
     .container {
-        max-width: 1028px;
-        min-width: 769px;
-        margin: 0 auto;
+        width: auto;
+        margin: auto;
     }
-} */
+}
